--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -22,7 +22,7 @@
 
   <ion-item>
       <ion-label floating>Phone</ion-label>
-      <ion-input type="number" [(ngModel)]="userDetails.userPhone"></ion-input>
+      <ion-input type="text" [(ngModel)]="userDetails.userPhone"></ion-input>
   </ion-item>
 
   <ion-item>
