--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,10 +1,10 @@
 <ion-header>
   <ion-navbar color="primary">
-    <ion-buttons end>
+    <!-- <ion-buttons end>
         <button ion-button icon-only (click)="logout()">
           <ion-icon name="log-out"></ion-icon>
         </button>
-      </ion-buttons>
+      </ion-buttons> -->
     <ion-title>Welcome</ion-title>
   </ion-navbar>
 </ion-header>
@@ -12,12 +12,12 @@
 <ion-content padding>
   <ion-list>
     <ion-item>
-        <p><b>Name: </b>{{userName}}</p>
-        <p><b>Email: </b>{{userEmail}}</p>
-        <p><b>Phone: </b>{{userPhone}}</p>
-        <p><b>Address: </b>{{userAddress}}</p>
-        <p><b>State: </b>{{userState}}</p>
-        <p><b>City: </b>{{userCity}}</p>
+        <h2><b>Name: </b>{{name}}</h2>
+        <h2><b>Email: </b>{{email}}</h2>
+        <h2><b>Phone: </b>{{phone}}</h2>
+        <h2><b>Address: </b>{{address}}</h2>
+        <h2><b>State: </b>{{state}}</h2>
+        <h2><b>City: </b>{{city}}</h2>
     </ion-item>
   </ion-list>
 </ion-content>
