File Upload Complete

--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content padding>
+
   <ion-list>
     <ion-item>
         <h2><b>Name: </b>{{name}}</h2>
@@ -20,4 +21,7 @@
         <h2><b>City: </b>{{city}}</h2>
     </ion-item>
   </ion-list>
+
+  <button <button ion-button (click)="takePhoto()">Take Photo</button>  
+
 </ion-content>
