App Complition Pending

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -8,7 +8,7 @@
   
   <h4>{{loginerror}}</h4>
   
-  <form [formGroup]="slideOneForm">
+  <form [formGroup]="loginForm">
   
     <ion-item>
       <ion-label floating>Email</ion-label>
